<resources>
    <string name="app_name">Open Light</string>
    <string name="yeelight_app_url">https://lh3.googleusercontent.com/77-VjwzZYcedr03X7YJVileas5sllrpXNIIOP4PoqKaLf5n4Bg7c7XnsZq18yKAOhw=w300-rw</string>
    <string name="do_not_show">Do not show again.</string>
    <string name="install_open_yeelight">Install/Open Yeelight app</string>
    <string name="dialog_instructions">1. You need a Yeelight smart bulb. \n2. Install official Yeelight app. \n3. Add your bulb to Yeelight app. (follow app instructions) \n4. Enable developer mode for your bulb in Yeelight app. (Open app -> Select bulb -> Bulb settings -> LAN Control -> Enable) \n5. Connect to same wifi with bulb and you are ready to go!</string>
    <string name="text_device">Device</string>
    <string name="text_room">Room</string>
    <string name="settings">Settings</string>

    <string name="open_parent_app">Open Yeelight app</string>
    <string name="store_base_url">https://play.google.com/store/apps/details?id=</string>
    <string name="parent_app_package">com.yeelight.cherry</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="add_device">Add Device</string>
    <string name="install_device">Install your device</string>
    <string name="install_instructions">1. Device is correctly powered;\n2. If developer options are not activated please install official application.</string>
    <string name="next">Next</string>
    <string name="add_device_rescan">Click to restart scan</string>
    <string name="add_device_scanning">Scanning</string>
    <string name="select_device">Select device to add</string>
    <string name="not_on_the_list">If device is not on the list, please make sure you activated developer options.</string>
    <string name="ok">OK</string>
    <string name="install_completed">Installation Completed</string>

    <string name="add_room">Add Room</string>
    <string name="create_name">Create Name</string>
    <string name="done">Done</string>
    <string name="delete_room">Delete Room</string>

    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="delete">Delete Bulb</string>

    <string name="movie">Movie</string>
    <string name="romance">Romance</string>
    <string name="night">Night</string>
    <string name="default_string">Default</string>

    <string name="wifi_warning">This application requires Wi-Fi to be enabled and connected. Do you want to enable it?</string>
    <string name="wifi_enabled">Wi-Fi Enabled</string>

    <string name="quota_reset">Yeelight API quota exceeded and reseted. Try your action again!</string>
    <string name="device_error">Device is offline, please check the following</string>
    <string name="device_error_debug">1. Check if your device is powered\n 2. Check if Wifi is available \n 3. If the device changed it\'s IP address, click the refresh button \n 4. Remove your device from this application and reconnect it</string>

    <string name="edit_bulb_ip">Edit Bulb IP</string>

    <string name="help">Help</string>

    <string name="question1">Why I can\'t find my bulb during setup?</string>
    <string name="answer1">1. Check if your device is powered on\n2. Check if Wifi is available\n3. Check if developer options are enabled for your bulb.</string>
    <string name="question2">I installed a bulb and it worked but later the device\'s state is offline…</string>
    <string name="answer2">Probably your bulb changed it\'s IP address, just click the refresh button and it will be updated.</string>
    <string name="question3">What is the difference between Device and Room tabs?</string>
    <string name="answer3">On Device tab you can control each bulb separately and on Room you can mass control your bulbs.</string>
    <string name="question4">Can i update my bulb\'s firmware from this application?</string>
    <string name="answer4">No, this is not possible. You will have to use the official APP.</string>
    <string name="question5">How can I report bugs or request features?</string>
    <string name="answer5">You can use the Github issue tracker.</string>
</resources>
