<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dialog_instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

    <ImageButton
        android:id="@+id/btn_yeelight"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:onClick="open_yeelight_app"
        android:text="@string/open_parent_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install_open_yeelight"
        app:layout_constraintLeft_toRightOf="@+id/btn_yeelight"
        app:layout_constraintTop_toTopOf="@+id/btn_yeelight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_yeelight"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp" />


    <CheckBox
        android:id="@+id/skip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/do_not_show"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_yeelight"
        android:layout_marginTop="0dp" >
    </CheckBox>

</android.support.constraint.ConstraintLayout>